Fixed overlapping layout content

--- a/src/containers/Layout/Layout.scss
+++ b/src/containers/Layout/Layout.scss
@@ -1,19 +1,18 @@
 .layout {
-  height: 100%;
+  min-height: 100%;
   background: #fff;
-
-  .logo {
-    color: #fff;
-    font-size: 30px;
-    width: 150px;
-    float: left;
-  }
-  .menu {
-    line-height: 64px;
-    margin-left: auto;
-    text-align: right;
-  }
-  .content {
-    padding: 50px;
-  }
+}
+.logo {
+  color: #fff;
+  font-size: 30px;
+  width: 150px;
+  float: left;
+}
+.menu {
+  line-height: 64px;
+  margin-left: auto;
+  text-align: right;
+}
+.content {
+  padding: 50px;
 }
